--- a/hungergames/app/views/hg/index.html.erb
+++ b/hungergames/app/views/hg/index.html.erb
@@ -1,6 +1,3 @@
-<h1 class= "banner">Welcome to the First Annual Hungry Games</h1>
-<h3 class= "banner">FEED US YOUR KIDS YO</h3>
-
-<button class="play"> Play </button>
-
-<h2 class= "trib">The Tribs</h2>
+<h1 class= "banner">Hungry Games</h1>
+<!-- <h3 class= "banner">FEED US YOUR KIDS YO</h3> -->
+<button class="play fade"></button>
